--- a/src/content/docs/docs/index.mdx
+++ b/src/content/docs/docs/index.mdx
@@ -7,8 +7,8 @@ hero:
   image:
     file: ../../../assets/houston.webp
   actions:
-    - text: Example Guide
-      link: /docs/guides/example/
+    - text: Getting started
+      link: /docs/getting-started/about/
       icon: right-arrow
     - text: Read the Starlight docs
       link: https://starlight.astro.build
