chore: replace placeholders with better placeholders
Signed-off-by: Jakob Steiner <jakob.steiner@glasskube.eu>

--- a/src/content/docs/docs/index.mdx
+++ b/src/content/docs/docs/index.mdx
@@ -1,17 +1,17 @@
 ---
-title: Welcome to distr.sh Docs
+title: Welcome to distr.sh
 description: Get started with distr.sh for software distribution.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: The easiest way to distribute enterprise software.
   image:
-    file: ../../../assets/houston.webp
+    file: ../../../assets/distr.svg
   actions:
     - text: Getting started
       link: /docs/getting-started/about/
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
+    - text: View on GitHub
+      link: https://github.com/glasskube/distr
+      icon: github
       variant: minimal
 ---
