docs(website): added assets for getting started section

--- a/src/content/docs/docs/getting-started/how-it-works.mdx
+++ b/src/content/docs/docs/getting-started/how-it-works.mdx
@@ -29,11 +29,11 @@ The Distr platform was designed with [ISVs in mind](https://glasskube.dev/blog/5
 
 Upon signing up, ISVs are greeted with the default view: the **"Vendor Platform"**. This can be verified from the top-right corner of the interface, this console allows ISVs to onboard customer profiles and invite their customers to the Distr platform. When an ISV sends an invite link, customers are directed to the **"Customer Portal"**. This portal provides customers with access to the ISV’s application, available versions, and tools to manage the deployment and lifecycle of the application.
 
-![vendor-portal](https://github.com/user-attachments/assets/d470a418-cc90-41e2-bf28-00f0e0b7e9ed)
+![vendor-portal](../../../../assets/docs/getting-started/how-it-works/dashboard.png)
 
 The Customer Portal takes a "less is more" approach, offering only the essential features customers need to manage the applications they’ve purchased. 
 
-![customer-portal](https://github.com/user-attachments/assets/ccf16563-aaf4-4ac3-a9b6-c64f52be0259)
+![customer-portal](../../../../assets/docs/getting-started/how-it-works/customer-portal.png)
 
 ISVs also have the option to white-label the Customer Portal, aligning it with their corporate [branding](https://glasskube.dev/docs/product/branding/). This creates a impression of an extension of the ISV’s product suite, often leaving end customers unaware that a third-party platform powers the delivery of their on-premises offering.
 
