--- a/src/content/docs/docs/product/vendor-portal.mdx
+++ b/src/content/docs/docs/product/vendor-portal.mdx
@@ -7,7 +7,7 @@ sidebar:
 
 The Independent Software Vendor (ISV) Portal is the primary interface for interacting with the Distr hub.
 
-Since Distr is a platform specifically built for ISVs, the vendor portal serves as the gateway to access all Distr features. In contrast, the [Customer Portal](/products/cloud/docs/product/customer-portal/) is a simplified version of the vendor portal, designed to provide end-customers with the ability to configure and control their distributions.
+Since Distr is a platform specifically built for ISVs, the vendor portal serves as the gateway to access all Distr features. In contrast, the [Customer Portal](https://glasskube.dev/products/cloud/docs/product/customer-portal/) is a simplified version of the vendor portal, designed to provide end-customers with the ability to configure and control their distributions.
 
 ![vendor-console](https://github.com/user-attachments/assets/c937bfb9-0727-4187-863c-7cce7c282c18)
 
