--- a/src/content/docs/docs/getting-started/how-it-works.mdx
+++ b/src/content/docs/docs/getting-started/how-it-works.mdx
@@ -37,14 +37,18 @@ The Customer Portal takes a "less is more" approach, offering only the essential
 ISVs also have the option to white-label the Customer Portal, aligning it with their corporate [branding](/products/cloud/docs/product/branding). This creates a impression of an extension of the ISV’s product suite, often leaving end customers unaware that a third-party platform powers the delivery of their on-premises offering.
 
 ## Programmatic access
+
 In addition to the graphical user interfaces, Distr provides programmatic access for users and developers.
 
 ### Distr API
+
 The Distr API, available at [API endpoint], allows users to bypass the GUI for direct programmatic interaction. The API used in Distr is the same as the open-source version, ensuring feature parity between the SaaS platform and the API. This guarantees a consistent experience regardless of the access method chosen.
 
 ### Distr SDK
+
 The Distr SDK enables users and developers to embed Distr’s application management features directly into their own applications or to even write new applications that leverage the SDK. While SDK development runs in parallel with Distr development, there may be occasional gaps in feature parity due to development speed and the impracticality of implementing certain platform-specific features in the SDK. Nevertheless, the SDK provides a powerful way to integrate Distr functionality into your workflows, and we encourage you to explore its capabilities.
 
 <Aside type="note" title="Info">
-  For more in-depth information on both the Distr API and SDK, head over to the Developer Tools section of the docs.
+  For more in-depth information on both the Distr API and SDK, head over to the
+  Developer Tools section of the docs.
 </Aside>
