chore: prettier format
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/getting-started/deployment-methods.mdx
+++ b/src/content/docs/docs/getting-started/deployment-methods.mdx
@@ -14,6 +14,7 @@ Let’s explore the features of each deployment method:
 ## Distr as a SaaS
 
 Features:
+
 - **Maximum flexibility** with access to the latest **updates** and features.
 - Simplified **upgrade** paths.
 - Support for **unlimited applications**.
@@ -22,16 +23,22 @@ Features:
 - **No platform management responsibilities**.
 
 <Aside type="note" title="Info">
-Get started by creating your Distr account [here](https://glasskube.cloud/signup.html) and then following the onboarding steps here
+  Get started by creating your Distr account
+  [here](https://glasskube.cloud/signup.html) and then following the onboarding
+  steps here
 </Aside>
 
 ## Self-Hosted Distr
 
 Features:
+
 - **Complete control** over the deployed version of Distr.
 - **Full responsibility for platform availability and maintenance**.
 - Ideal for users who **prefer to manage their environment** independently.
 
 <Aside type="note" title="Info">
-To get started with the self-hosted option, create your [account](https://distr.sh/) on Distr first and then follow our [guide](https://glasskube.dev/products/cloud/docs/guides/how-to-self-host-distr/) to deploy Distr in your environment.
+  To get started with the self-hosted option, create your
+  [account](https://distr.sh/) on Distr first and then follow our
+  [guide](https://glasskube.dev/products/cloud/docs/guides/how-to-self-host-distr/)
+  to deploy Distr in your environment.
 </Aside>
