--- a/src/content/docs/docs/getting-started/how-it-works.mdx
+++ b/src/content/docs/docs/getting-started/how-it-works.mdx
@@ -4,6 +4,7 @@ description: About distr
 sidebar:
   order: 2
 ---
+
 import {Aside} from '@astrojs/starlight/components';
 
 ## Components
@@ -18,7 +19,9 @@ The platform consists of two key components:
 This architecture ensures that communication and updates between the ISV and their end customers is as close to real time as possible, facilitating efficient application lifecycle management.
 
 <Aside type="note" title="Info">
-Ready to get started? Create your Distr account [here](https://glasskube.cloud/signup.html) and then following the onboarding steps here
+  Ready to get started? Create your Distr account
+  [here](https://glasskube.cloud/signup.html) and then following the onboarding
+  steps here
 </Aside>
 
 ## Two Portals, One Platform
@@ -29,21 +32,25 @@ Upon signing up, ISVs are greeted with the default view: the **"Vendor Platform"
 
 ![vendor-portal](https://github.com/user-attachments/assets/d470a418-cc90-41e2-bf28-00f0e0b7e9ed)
 
-The Customer Portal takes a "less is more" approach, offering only the essential features customers need to manage the applications they’ve purchased. 
+The Customer Portal takes a "less is more" approach, offering only the essential features customers need to manage the applications they’ve purchased.
 
 ![customer-portal](https://github.com/user-attachments/assets/ccf16563-aaf4-4ac3-a9b6-c64f52be0259)
 
 ISVs also have the option to white-label the Customer Portal, aligning it with their corporate [branding](https://glasskube.dev/docs/product/branding/). This creates a impression of an extension of the ISV’s product suite, often leaving end customers unaware that a third-party platform powers the delivery of their on-premises offering.
 
 ## Programmatic access
+
 In addition to the graphical user interfaces, Distr provides programmatic access for users and developers.
 
 ### Distr API
+
 The [Distr API](https://glasskube.dev/products/cloud/docs/integrations/distr-cloud-api/), allows users to bypass the GUI for direct programmatic interaction. The API used in Distr is the same as the open-source version, ensuring feature parity between the SaaS platform and the API. This guarantees a consistent experience regardless of the access method chosen.
 
 ### Distr SDK
+
 The [Distr SDK](https://glasskube.dev/products/cloud/docs/integrations/distr-cloud-sdk/) enables users and developers to embed Distr’s application management features directly into their own applications or to even write new applications that leverage the SDK. While SDK development runs in parallel with Distr development, there may be occasional gaps in feature parity due to development speed and the impracticality of implementing certain platform-specific features in the SDK. Nevertheless, the SDK provides a powerful way to integrate Distr functionality into your workflows, and we encourage you to explore its capabilities.
 
 <Aside type="note" title="Info">
-  For more in-depth information on both the Distr API and SDK, head over to the Developer Tools section of the docs.
+  For more in-depth information on both the Distr API and SDK, head over to the
+  Developer Tools section of the docs.
 </Aside>
