--- a/src/content/docs/docs/use-cases/edge-deployments.mdx
+++ b/src/content/docs/docs/use-cases/edge-deployments.mdx
@@ -10,24 +10,26 @@ In addition to developing and deploying software for end customers, many ISVs ex
 Edge deployments are characterized by the deployment of software to decentralized, often resource-constrained environments that operate outside of traditional data centers or cloud infrastructures. These environments are typically closer to the source of data generation, enabling faster processing, lower latency, and increased efficiency for specific use cases.
 
 ## Examples of Edge Deployments
+
 - **IoT Devices**: Devices such as smart sensors, wearables, or connected appliances equipped with ISV software that collect, process, and analyze data in real-time.
 - **Hardware with Pre-Installed ISV Software**: Custom-built hardware, like medical devices, industrial machinery, or point-of-sale systems, shipped with the ISV’s software pre-installed and pre-configured.
 - **Satellites**: Space-based systems where ISVs deploy software to manage and operate satellites, handle data transmission, or run specialized algorithms directly onboard.
 
 ## Use cases
+
 Edge deployments span a wide range of industries and use cases, including:
 
-+ **Healthcare**: Medical imaging devices or portable diagnostic tools running ISV software to analyze patient data locally without requiring internet access.
+- **Healthcare**: Medical imaging devices or portable diagnostic tools running ISV software to analyze patient data locally without requiring internet access.
 
-+ **Manufacturing**: Industrial robots and monitoring systems equipped with ISV applications to optimize production lines or predict maintenance needs on the factory floor.
+- **Manufacturing**: Industrial robots and monitoring systems equipped with ISV applications to optimize production lines or predict maintenance needs on the factory floor.
 
-+ **Telecommunications**: Network edge devices, such as base stations, running ISV software to enhance connectivity and reduce latency for users in remote areas.
+- **Telecommunications**: Network edge devices, such as base stations, running ISV software to enhance connectivity and reduce latency for users in remote areas.
 
-+ **Transportation**: Vehicles outfitted with ISV software for fleet management, navigation, or autonomous driving functions.
+- **Transportation**: Vehicles outfitted with ISV software for fleet management, navigation, or autonomous driving functions.
 
-+ **Energy**: Wind turbines, solar panels, or grid equipment running ISV software to monitor performance and optimize energy generation or distribution.
+- **Energy**: Wind turbines, solar panels, or grid equipment running ISV software to monitor performance and optimize energy generation or distribution.
 
-+ **Defense and Aerospace**: Edge systems used for real-time data analysis, mission-critical tasks, or secure communication in defense or space missions.
+- **Defense and Aerospace**: Edge systems used for real-time data analysis, mission-critical tasks, or secure communication in defense or space missions.
 
 ## Challenges of Edge Deployments
 
