docs(website): added missing visual assets

--- a/src/content/docs/docs/product/branding.mdx
+++ b/src/content/docs/docs/product/branding.mdx
@@ -29,12 +29,12 @@ Since end-customers will likely run vulnerability scans and other tests on the a
 2. Fill out the form with your company’s branding information.
 3. Review your changes before clicking Save.
 
-![branding form](https://github.com/user-attachments/assets/8f173f4a-0efc-425c-8bcd-4de6207299f3)
+![branding form](../../../../assets/docs/product/branding/before-branding.png)
 
 Before saving, the Customer Portal will look like this:
 
-![pre-brand](https://github.com/user-attachments/assets/a4b25083-8fc5-4136-afeb-35fd77157f37)
+![pre-brand](../../../../assets/docs/product/branding/branding-form.png)
 
 After saving, your end-customer will have a fully re-branded Customer Portal that looks something like this:
 
-![white-gloved-portal](https://github.com/user-attachments/assets/234c8fed-954d-4650-ad21-f56a71a8e503)
+![white-gloved-portal](../../../../assets/docs/product/branding/branding-after.png)
