--- a/src/content/docs/docs/product/customer-portal.mdx
+++ b/src/content/docs/docs/product/customer-portal.mdx
@@ -10,20 +10,16 @@ The Customer Portal provides end-customers with the essential features they need
 The customer portal offers:
 
 #### 1. Management of all deployment from a single pane
+![deployment](../../../../assets/docs/product/customer-portal/cus-portal.png)
 
-![deployment](https://github.com/user-attachments/assets/580ae067-14b5-445c-a1f2-b1962bac0f1e)
-
-#### 2. Access to view current deployment logs
-
-![deployment](https://github.com/user-attachments/assets/4ca04c51-159f-442f-8b39-876e66a208ec)
+#### 2. Access to view current deployment logs 
+![deployment](../../../../assets/docs/product/customer-portal/logs.png)
 
 #### 3. Ability to edit deployment configurations
-
-![deployment](https://github.com/user-attachments/assets/1766e8fa-9446-4585-8eaa-05b0ed88339c)
+![deployment](../../../../assets/docs/product/customer-portal/cp-edit.png)
 
 #### 4. Ability to deploy new versions of an application
-
-![deployment](https://github.com/user-attachments/assets/a1dc945e-6012-4fa7-a38e-33a37cf71a7f)
+![deployment](../../../../assets/docs/product/customer-portal/cp-version.png)
 
 :::info
 If ever in doubt of which portal you are looking at, in the top left corner of the screen you can find the name of the portal you're currently in.
