--- a/src/content/docs/docs/getting-started/how-it-works.mdx
+++ b/src/content/docs/docs/getting-started/how-it-works.mdx
@@ -12,8 +12,8 @@ import {Aside} from '@astrojs/starlight/components';
 
 The platform consists of two key components:
 
-1. **Distr Server**: A centralized platform accessible via a GUI, API, or SDK. This is where ISVs manage their application deployments and provide version updates to customers.
-2. **Distr Agents**: Lightweight components, one for Docker Compose and another for Helm-packaged applications, deployed within the customer-controlled environment, alongside the ISV application. The agent handles maintenance and lifecycle tasks and communicates with the centralized platform. It reports critical information such as uptime status and the current application version while comparing it to the versions available from the ISV.
+1. **Distr Hub**: A centralized platform accessible via a GUI, API, or SDK. This is where ISVs manage their application deployments and provide version updates to customers.
+2. **Distr Agents**: Lightweight components, one for Docker Compose and another for Helm-packaged applications, deployed within the customer-controlled environment, alongside the ISV application. The agent handles maintenance and lifecycle tasks and communicates with Distr Hub. It reports critical information such as uptime status and the current application version while comparing it to the versions available from the ISV.
 
 This architecture ensures that communication and updates between the ISV and their end customers is as close to real time as possible, facilitating efficient application lifecycle management.
 
@@ -43,7 +43,7 @@ In addition to the graphical user interfaces, Distr provides programmatic access
 
 ### Distr API
 
-The [Distr API](https://glasskube.dev/products/cloud/docs/integrations/distr-cloud-api/), allows users to bypass the GUI for direct programmatic interaction. The API used in Distr is the same as the open-source version, ensuring feature parity between the SaaS platform and the API. This guarantees a consistent experience regardless of the access method chosen.
+The [Distr API](https://glasskube.dev/products/cloud/docs/integrations/distr-cloud-api/), allows users to bypass the GUI for direct programmatic interaction. The API used in Distr is the same as the Open Source version, ensuring feature parity between the SaaS platform and the API. This guarantees a consistent experience regardless of the access method chosen.
 
 ### Distr SDK
 
