--- a/src/content/docs/docs/getting-started/quickstart.mdx
+++ b/src/content/docs/docs/getting-started/quickstart.mdx
@@ -156,5 +156,5 @@ Head over to the `Deployments` tab and click on the `+ Add deployment` button an
 
 ![Add deployments](../../../../assets/docs/getting-started/quickstart/add-deploy.png)
 
-- For more information on how to deploy a Docker compose packaged application, check out this [guide](https://glasskube.dev/products/cloud/docs/guides/onboarding-a-docker-app/).
-- For more information on how to deploy a Helm chart packaged application, check out this [guide](https://glasskube.dev/products/cloud/docs/guides/onboard-helm-app/).
+- For more information on how to deploy a Docker compose packaged application, check out this [guide](/docs/guides/onboarding-a-docker-app/).
+- For more information on how to deploy a Helm chart packaged application, check out this [guide](/docs/guides/onboarding-a-helm-app/).
