docs(website): addressed more of Louis feedback

--- a/src/content/docs/docs/product/customer-portal.mdx
+++ b/src/content/docs/docs/product/customer-portal.mdx
@@ -26,4 +26,4 @@ The customer portal offers:
 If ever in doubt of which portal you are looking at, in the top left corner of the screen you can find the name of the portal you're currently in.
 :::
 
-The Customer Portal can be [customized](/products/cloud/docs/product/branding/) with the ISV's corporate logo and name, making Distr feel like an extension of the ISV's product rather than just another tool for the end-customer to adopt and learn.
+The Customer Portal can be [customized](/docs/product/branding/) with the ISV's corporate logo and name, making Distr feel like an extension of the ISV's product rather than just another tool for the end-customer to adopt and learn.
