--- a/src/content/docs/docs/product/distr-cloud-agent.mdx
+++ b/src/content/docs/docs/product/distr-cloud-agent.mdx
@@ -5,7 +5,7 @@ sidebar:
   order: 3
 ---
 
-Alongside the Distr server, complete the core of the Distr platform are its lightweight agents, designed to be installed in the customer's environment alongside the ISV’s application. These agents provide the functionality necessary for managing application life cycles in decentralized and customer-controlled environments, without requiring direct access to the deployment target.
+Alongside the Distr Hub, complete the core of the Distr platform are its lightweight agents, designed to be installed in the customer's environment alongside the ISV’s application. These agents provide the functionality necessary for managing application life cycles in decentralized and customer-controlled environments, without requiring direct access to the deployment target.
 
 Distr offers two pre-built agent types, tailored for different deployment scenarios: one for Helm and another for Docker Compose. These agents handle critical lifecycle tasks, including guided installation, updates, and performing health checks. By automating these processes, the agents simplify the operational burden for end customers and reduce the need for ISV intervention.
 
