--- a/src/content/docs/docs/getting-started/deployment-methods.mdx
+++ b/src/content/docs/docs/getting-started/deployment-methods.mdx
@@ -37,8 +37,7 @@ Features:
 - Ideal for users who **prefer to manage their environment** independently.
 
 <Aside type="note" title="Info">
-  To get started with the self-hosted option, create your
-  [account](https://distr.sh/) on Distr first and then follow our
+  To get started with the self-hosted option, follow our
   [guide](/docs/self-hosting/self-hosting/)
   to deploy Distr in your environment.
 </Aside>
