chore: fix typos
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/getting-started/deployment-methods.mdx
+++ b/src/content/docs/docs/getting-started/deployment-methods.mdx
@@ -23,9 +23,8 @@ Features:
 - **No platform management responsibilities**.
 
 <Aside type="note" title="Info">
-  Get started by creating your Distr account
-  [here](https://distr.sh/) and then following the onboarding
-  steps here
+  Get started by creating your Distr account [here](https://distr.sh/) and then
+  following the onboarding steps here
 </Aside>
 
 ## Self-Hosted Distr
@@ -38,6 +37,5 @@ Features:
 
 <Aside type="note" title="Info">
   To get started with the self-hosted option, follow our
-  [guide](/docs/self-hosting/self-hosting/)
-  to deploy Distr in your environment.
+  [guide](/docs/self-hosting/self-hosting/) to deploy Distr in your environment.
 </Aside>
