docs: update screenshots (#12)
Signed-off-by: Philip Miglinci <pmig@glasskube.com>
Co-authored-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/getting-started/deployment-methods.mdx
+++ b/src/content/docs/docs/getting-started/deployment-methods.mdx
@@ -7,7 +7,7 @@ sidebar:
 
 import {Aside} from '@astrojs/starlight/components';
 
-Distr is a versatile platform designed to adapt to user preferences, thanks to its open-core foundation. It offers two deployment methods: as a SaaS solution hosted, maintained by the Glasskube team or as a self-hosted option.
+Distr is a versatile platform designed to adapt to user preferences, thanks to its Open Source foundation. It offers two deployment methods: as a SaaS solution hosted, maintained by the Glasskube team or as a self-hosted option.
 
 Let’s explore the features of each deployment method:
 
@@ -23,9 +23,8 @@ Features:
 - **No platform management responsibilities**.
 
 <Aside type="note" title="Info">
-  Get started by creating your Distr account
-  [here](https://glasskube.cloud/signup.html) and then following the onboarding
-  steps here
+  Get started by creating your Distr account [here](https://distr.sh/) and then
+  following the onboarding steps here
 </Aside>
 
 ## Self-Hosted Distr
@@ -37,8 +36,6 @@ Features:
 - Ideal for users who **prefer to manage their environment** independently.
 
 <Aside type="note" title="Info">
-  To get started with the self-hosted option, create your
-  [account](https://distr.sh/) on Distr first and then follow our
-  [guide](https://glasskube.dev/products/cloud/docs/guides/how-to-self-host-distr/)
-  to deploy Distr in your environment.
+  To get started with the self-hosted option, follow our
+  [guide](/docs/self-hosting/self-hosting/) to deploy Distr in your environment.
 </Aside>
