--- a/src/content/docs/docs/product/branding.mdx
+++ b/src/content/docs/docs/product/branding.mdx
@@ -1,19 +1,19 @@
 ---
-title: White gloved Distr
+title: White labeled Distr
 description: WIP
 sidebar:
   order: 4
 ---
 
-## Use Case for White-Gloving Distr
+## Use Case for White-Labeling Distr
 
 A technical stack is like a delicate house of cards, carefully constructed over time to meet a company’s evolving needs. It is created and maintained by internal engineers who work with the system daily. Most engineers, and rightly so, are cautious or have a high threshold when it comes to onboarding new tools.
 
-As software end-customers, they’ve already made the decision to adopt the ISV’s tool and integrate it into their tech stack. However, they haven’t agreed to adopt a third-party tool (Distr) to manage the distribution of that software. This is where white-gloving becomes essential.
+As software end-customers, they’ve already made the decision to adopt the ISV’s tool and integrate it into their tech stack. However, they haven’t agreed to adopt a third-party tool (Distr) to manage the distribution of that software. This is where white-labeling becomes essential.
 
-## What is White-Gloving?
+## What is White-Labeling?
 
-White-gloving is the process of rebranding a third-party tool, like Distr, to match the corporate identity of the ISV. The primary goal is to reduce friction between the ISV and the end-customer. The end-customer shouldn’t feel like they’re adopting or learning an entirely new tool.
+White-labeling is the process of rebranding a third-party tool, like Distr, to match the corporate identity of the ISV. The primary goal is to reduce friction between the ISV and the end-customer. The end-customer shouldn’t feel like they’re adopting or learning an entirely new tool.
 
 By rebranding Distr, it can look and feel like an internal ISV portal, purpose-built to help end-customers manage their deployments. This approach makes Distr feel like an extension of the ISV’s offering, simplifying the experience for the end-customer.
 
@@ -23,18 +23,18 @@ To further reduce overhead for the end-customer, we can work with the ISV to bun
 
 Since end-customers will likely run vulnerability scans and other tests on the application files, the bundled agents will be included in the same process. This eliminates the need for a separate vetting process for the agents, further reducing the effort required by the end-customer while maintaining their trust.
 
-## How to White-Glove Distr
+## How to White-label Distr
 
 1. In the Vendor Portal, navigate to the Branding tab in the left-hand sidebar.
 2. Fill out the form with your company’s branding information.
 3. Review your changes before clicking Save.
 
-![branding form](https://github.com/user-attachments/assets/8f173f4a-0efc-425c-8bcd-4de6207299f3)
+![branding form](../../../../assets/docs/product/branding/before-branding.png)
 
 Before saving, the Customer Portal will look like this:
 
-![pre-brand](https://github.com/user-attachments/assets/a4b25083-8fc5-4136-afeb-35fd77157f37)
+![pre-brand](../../../../assets/docs/product/branding/branding-form.png)
 
 After saving, your end-customer will have a fully re-branded Customer Portal that looks something like this:
 
-![white-gloved-portal](https://github.com/user-attachments/assets/234c8fed-954d-4650-ad21-f56a71a8e503)
+![white-labeled-portal](../../../../assets/docs/product/branding/branding-after.png)
