--- a/src/content/docs/docs/product/vendor-portal.mdx
+++ b/src/content/docs/docs/product/vendor-portal.mdx
@@ -7,19 +7,20 @@ sidebar:
 
 The Independent Software Vendor (ISV) Portal is the primary interface for interacting with the Distr hub.
 
-Since Distr is a platform specifically built for ISVs, the vendor portal serves as the gateway to access all Distr features. In contrast, the [Customer Portal](/products/cloud/docs/product/customer-portal/) is a simplified version of the vendor portal, designed to provide end-customers with the ability to configure and control their distributions.
+Since Distr is a platform specifically built for ISVs, the vendor portal serves as the gateway to access all Distr features. In contrast, the [Customer Portal](/docs/product/customer-portal/) is a simplified version of the vendor portal, designed to provide end-customers with the ability to configure and control their distributions.
 
-![vendor-console](https://github.com/user-attachments/assets/c937bfb9-0727-4187-863c-7cce7c282c18)
+![vendor-console](../../../../assets/docs/product/vendor-portal/vendor-portal.png)
 
 The vendor portal offers:
 
 1. A main dashboard featuring uptime metrics, graphs, and table widgets to monitor and manage applications and deployments.
-   2.The `"Applications"` tab, where users can add multiple applications and host multiple versions simultaneously, allowing end customers to deploy different versions as needed.
-2. The `"Customers"` tab, for managing customer information.
-3. Deployment management, to oversee and control internally deployed applications.
-4. A section to manage the users on your team.
-5. A light/dark mode toggle button.
-6. An account setting section.
+2. The `"Applications"` tab, where users can add multiple applications and host multiple versions simultaneously, allowing end customers to deploy different versions as needed.
+3. The `"Customers"` tab, for managing customer information.
+4. Deployment management, to oversee and control internally deployed applications.
+5. A section to manage the users on your team.
+6. The branding section
+7. A light/dark mode toggle button.
+8. An account setting section.
 
 :::info
 If ever in doubt of which portal you are looking at, in the top left corner of the screen you can find the name of the portal you're currently in.
