--- a/src/content/docs/docs/use-cases/on-prem.mdx
+++ b/src/content/docs/docs/use-cases/on-prem.mdx
@@ -5,7 +5,7 @@ sidebar:
   order: 1
 ---
 
-[On-premises](https://glasskube.dev/glossary/on-premises-definition/) deployment refers to the delivery of commercial software to environments where the [ISV](https://glasskube.dev/glossary/isv-meaning/) has no direct control over the infrastructure. If there is a shared responsibility between the ISV and the end customer, this is referred to as [Bring Your Own Cloud (BYOC)](https://glasskube.dev/glossary/byoc-definition/). In cases where the external environment or device is managed entirely by the ISV, this falls under internally deployed applications category.
+[On-premises](https://glasskube.dev/glossary/on-premises-definition/) deployment refers to the delivery of commercial software to environments where the [ISV](https://glasskube.dev/glossary/isv-meaning/) has no direct control over the infrastructure. If there is a shared responsibility between the ISV and the end customer, this is referred to as Bring Your Own Cloud (BYOC). In cases where the external environment or device is managed entirely by the ISV, this falls under internally deployed applications category.
 
 For various reasons, enterprise software consumers often request that ISV software be deployed in their on-premises environments. These include traditional data centers as well as customer-operated cloud accounts. In these types of scenarios, customers want to use the ISV’s software but prefer to host it internally, taking full responsibility for its maintenance, upgrades, and day-to-day operations. This approach provides key benefits for customers, such as ensuring no proprietary data leaves their internal domain and maximizing the use of pre-purchased compute resources or discounted infrastructure.
 
@@ -35,15 +35,15 @@ By using Distr, ISVs can confidently deliver on-prem deployments, improve commun
 
 ### Communication
 
-The unified Distr platform, with its distinct [Vendor](https://glasskube.dev/products/cloud/docs/product/vendor-portal/) and [Customer Portals](https://glasskube.dev/products/cloud/docs/product/customer-portal/), provides a shared view of deployment health and configuration data to both parties. This ensures both ISVs and their end customers are working from the same set of information, enabling far more effective communication. The platform can also automatically alert end customers about key updates, such as the availability of new versions or any issues with deployment health. By consolidating shared data into one unified view, the need for frequent calls is significantly reduced, improving collaboration.
+The unified Distr platform, with its distinct [Vendor](/docs/product/vendor-portal/) and [Customer Portals](/docs/product/customer-portal/), provides a shared view of deployment health and configuration data to both parties. This ensures both ISVs and their end customers are working from the same set of information, enabling far more effective communication. The platform can also automatically alert end customers about key updates, such as the availability of new versions or any issues with deployment health. By consolidating shared data into one unified view, the need for frequent calls is significantly reduced, improving collaboration.
 
 ### Troubleshooting
 
-In addition to sharing uptime metrics, Distr makes Helm and Docker [logs](http://localhost:3000/products/cloud/docs/product/customer-portal/#2-access-to-view-current-deployment-logs) accessible directly from the dashboard. This allows ISVs to identify issues in real time and determine the best course of action to resolve them. With all relevant information at their fingertips, troubleshooting becomes faster and more efficient for both ISVs and customers.
+In addition to sharing uptime metrics, Distr makes Helm and Docker [logs](/docs/product/customer-portal/#2-access-to-view-current-deployment-logs) accessible directly from the dashboard. This allows ISVs to identify issues in real time and determine the best course of action to resolve them. With all relevant information at their fingertips, troubleshooting becomes faster and more efficient for both ISVs and customers.
 
 ### Uptime metrics and logs export
 
-By default, uptime metrics and [logs](https://glasskube.dev/products/cloud/docs/product/customer-portal/#2-access-to-view-current-deployment-logs) are available to both the ISV and the end customer. There’s no need to manually log into a VM or Kubernetes cluster to retrieve health statuses or debug information. This shared access saves time and improves efficiency for both parties.
+By default, uptime metrics and [logs](/docs/product/customer-portal/#2-access-to-view-current-deployment-logs) are available to both the ISV and the end customer. There’s no need to manually log into a VM or Kubernetes cluster to retrieve health statuses or debug information. This shared access saves time and improves efficiency for both parties.
 
 ### License management
 
@@ -51,4 +51,4 @@ An upcoming feature will give ISVs extensive flexibility over license management
 
 ### Onboarding
 
-Onboarding is straightforward with Distr’s [built-in wizard](https://glasskube.dev/products/cloud/docs/getting-started/quickstart/#follow-the-onboarding-wizard-to-get-started). Adding Docker and Helm applications, as well as onboarding new customers, is quick and intuitive. Once a customer is registered under the ISV’s account, they automatically receive an email with their credentials to access the Customer Portal, ensuring a smooth onboarding process.
+Onboarding is straightforward with Distr’s [built-in wizard](/docs/getting-started/quickstart/#follow-the-onboarding-wizard-to-get-started). Adding Docker and Helm applications, as well as onboarding new customers, is quick and intuitive. Once a customer is registered under the ISV’s account, they automatically receive an email with their credentials to access the Customer Portal, ensuring a smooth onboarding process.
