chore: rename from "distr.sh" to "Distr"
Signed-off-by: Jakob Steiner <jakob.steiner@glasskube.eu>

--- a/src/content/docs/docs/index.mdx
+++ b/src/content/docs/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Welcome to distr.sh
-description: Get started with distr.sh for software distribution.
+title: Welcome to Distr
+description: Get started with Distr for software distribution.
 template: splash
 hero:
   tagline: The easiest way to distribute enterprise software.
